[package]
name = "dusk-api"
description = "Crate, that defines plugin interface used in dusk project"
readme = "README.md"
license-file = "LICENSE"
license = "GPL-3.0-or-later"
version = "0.1.2"
authors = ["Andy Gozas <andy@gozas.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
rustc_version = "0.3.0"

[dependencies]
libloading = "0.7"
